--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,28 @@
 		    <groupId>com.google.code.gson</groupId>
 		    <artifactId>gson</artifactId>
 		</dependency>
+		
+		<dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+	      <exclusions>
+	      	<exclusion>
+	      		<groupId>nz.net.ultraq.thymeleaf</groupId>
+	      		<artifactId>thymeleaf-layout-dialect</artifactId>
+	      	</exclusion>
+	      </exclusions>
+	    </dependency>
+	    
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-starter-actuator</artifactId>
+	    </dependency>
+	    
+	    <dependency>
+	      <groupId>org.springframework.boot</groupId>
+	      <artifactId>spring-boot-devtools</artifactId>
+	      <scope>runtime</scope>
+	    </dependency>
 	</dependencies>
 
 	<build>
