--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@
 spring.thymeleaf.mode=HTML
 
 logging.level.org.springframework=INFO
-
+logging.level.web=debug
+logging.level.root=debug
 spring.profiles.active=production
 
 server.port=${PORT:5000}
